--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 
 body{
     /* background-image: url("../images/beautiful-background-4.jpg"); */
-    background-color: #888888;
+    background-color: 	#636363;
+    /* font-family: Helvetica, Arial, sans-serif; */
+    /* font-family: 'Oswald', sans-serif; */
 
     
 }
@@ -20,28 +22,34 @@ body{
     background-color:#ffa500;
     color:#ffffff;
     width:20%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:'Permanent Marker', cursive;
     padding:21px;  
     float: left;  
     text-align: center;
     font-weight: bold;
+    border-bottom: 1.5px solid black;
+    border-right: 1.5px solid black;
+    font-stretch: normal;
 }
 ul{
     list-style-type: none;
 }
 li{
     float:right;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
+    font-family: 'Libre Franklin', sans-serif;
+    color: #003333;
     text-decoration: none;
     padding:20px 0px 0px 0px;
 }
 
 li a{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
+    color: #003333;
     text-decoration: none;
     padding: 14px 16px;
+}
+.stick{
+color: orange;
 }
 .content{
     width:960px;
@@ -61,6 +69,8 @@ li a{
 hr{
     width:935px;
     margin:10px;
+    
+    border: 0.5px solid orange;
 }
 img{
     widows: 214px;
@@ -101,7 +111,7 @@ button{
 
 footer{
     padding:20px;
-    background-color: #666666;
+    background-color: 	#636363;
     text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     border-top: 5px solid #ffa500;;
@@ -109,6 +119,8 @@ footer{
     bottom:0;
     width:100%;
     position:fixed;
+    color: white;
+    font-size: 12px;
 
 }
 
