--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,14 +22,15 @@ body{
     background-color:#ffa500;
     color:#ffffff;
     width:20%;
-    font-family:'Permanent Marker', cursive;
-    padding:21px;  
+    font-family:'Oleo Script Swash Caps', cursive;
+    padding:13px;  
     float: left;  
     text-align: center;
     font-weight: bold;
-    border-bottom: 1.5px solid black;
-    border-right: 1.5px solid black;
+    border-bottom: 1.5px solid #353535;
+    border-right: 1.5px solid #636363;
     font-stretch: normal;
+    font-size: 30px;
 }
 ul{
     list-style-type: none;
@@ -157,7 +158,7 @@ footer{
     width:180px;
     padding:10px;
     bottom: -5px;
-    left: 215px;
+    left: 217px;
 }
 .img-txt3 {
     position: absolute;
@@ -169,7 +170,7 @@ footer{
     width:180px;
     padding:10px;
     bottom: -5px;
-    left: 425px;
+    left: 429px;
 }
 .img-txt4 {
     position: absolute;
@@ -181,7 +182,7 @@ footer{
     width:180px;
     padding:10px;
     bottom: -5px;
-    left: 635px;
+    left: 640px;
 }
 .img-txt5 {
     position: absolute;
@@ -192,7 +193,7 @@ footer{
     border:none;
     width:180px;
     padding: 10px;
-    bottom: -215px;
+    bottom: -218px;
     left: 5px;
 }
 input:hover{
