--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,206 +1,229 @@
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: #636363;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
 
-body{
-    /* background-image: url("../images/beautiful-background-4.jpg"); */
-    background-color: 	#636363;
-    /* font-family: Helvetica, Arial, sans-serif; */
-    /* font-family: 'Oswald', sans-serif; */
-
-    
-}
-.header{
-    background-color:#ffffff;
-    border-color: #cccccc;
-    height: 58px;
-    width:100%;
-}
-#header-div{
-    width:956px;
-    margin:0 auto;
-}
-#header-name {
-    position: relative;
-    background-color:#ffa500;
-    color:#ffffff;
-    width:20%;
-    font-family:'Oleo Script Swash Caps', cursive;
-    padding:13px;  
-    float: left;  
-    text-align: center;
-    font-weight: bold;
-    border-bottom: 1.5px solid #353535;
-    border-right: 1.5px solid #636363;
-    font-stretch: normal;
+  
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+  h1,
+  h2,
+  h3,
+  p {
+    margin-bottom: 20px;
+  }
+  
+  p:last-child {
+    margin-bottom: 0;
+  }
+  
+  h1,
+  h2,
+  h3 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
+    color: #333;
+  }
+  
+  h1 {
+    padding-bottom: 20px;
     font-size: 30px;
-}
-ul{
-    list-style-type: none;
-}
-li{
-    float:right;
-    font-family: 'Libre Franklin', sans-serif;
-    color: #003333;
-    text-decoration: none;
-    padding:20px 0px 0px 0px;
-}
-
-li a{
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #003333;
-    text-decoration: none;
-    padding: 14px 16px;
-}
-.stick{
-color: orange;
-}
-.content{
-    width:960px;
-    margin:10px auto;
-    border-color: #dddddd;
-    background-color: #ffffff;
-    height:610px;
-}
-
-.title{
-    color:#003333;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding:15px;
-    font-weight: bold;
-    font-size:20px;
-}
-hr{
-    width:935px;
-    margin:10px;
-    
-    border: 0.5px solid orange;
-}
-img{
-    widows: 214px;
-    height:316px;
+    line-height: 49px;
+    border-bottom: 1px solid #ffa500;
+  }
+  
+  h2,
+  h3 {
+    font-size: 22px;
+  }
+  
+ 
+  
+  #masthead {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #fff;
+    background: #fff;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  #logo {
     float: left;
-    margin: 5px;
-}
-
-.clear{
-    clear:both;
-}
-.contact-content{
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
-    padding:20px;
-    line-height: 1.5;
-}
-.text{
-    width:100%;
-    height:20px;
-    margin-bottom: 20px;
-}
-
-textarea{
-    width:100%;
-    height:200px;
-    margin-bottom: 20px;
-}
-button{
-    background-color: #ffa500;;
-    color:#ffffff;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    width: 230px;
+    height: 80px;
+    font-family: 'Oleo Script Swash Caps', cursive;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
     text-align: center;
-    padding:10px 32px;
-    border:none;
-    font-size:16px;
-}
+    text-decoration: none;
+    background: #ffa500;
+    border-right: 1px solid #333;
+    border-bottom: 1px solid #333;
+  }
+  
+  nav {
+    float: right;
+    margin-top: 25px;
+  }
+  
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #333;
+    text-decoration: none;
+    border-left: 1px solid #ffa500;
+  }
+  
+  nav a:first-child {
+    border-left: 0 none;
+  }
+  
 
-footer{
-    padding:20px;
-    background-color: 	#636363;
-    text-align: center;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    border-top: 5px solid #ffa500;;
-    left:0;
-    bottom:0;
-    width:100%;
-    position:fixed;
-    color: white;
+  
+  footer {
+    padding: 30px 0;
+    clear: both;
     font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: #666;
+    border-top: 4px solid #ffa500;
+    height: 50px;
+  }
+  
+  h3, h2 {
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eee;
+  }
+  
 
-}
-
-.imageText{
-    position: relative;
-    height:200px;
+  
+  #main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+  }
+  
+  .main-section {
     float: left;
-}
-.portfolio-img{
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+  }
+  
+  /* portfolio page */
+  
+  .work {
     position: relative;
-    width:200px;
-    height:200px;
-}
-.img-txt1 {
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+  
+  .work:nth-child(even) {
+    margin-right: 40px;
+  }
+  
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+  
+  .work h3 {
     position: absolute;
-    background-color: #ffa500;
-    color:#ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
     text-align: center;
-    border:none;
-    width: 180px;
-    padding: 10px;
-    bottom: -5px;
-    left: 5px;
-}
+    background: #ffa500;
+    border-bottom: 0;
+  }
+  
+  .auth-image {
+    float: left;
+    width: 317px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+    border-right: 1px solid #333;
+    border-bottom: 1px solid #333; 
+  }
+  
 
-.img-txt2 {
-    position: absolute;
-    background-color: #ffa500;
-    color:#ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    border:none;
-    width:180px;
-    padding:10px;
-    bottom: -5px;
-    left: 217px;
-}
-.img-txt3 {
-    position: absolute;
-    background-color: #ffa500;
-    color:#ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    border:none;
-    width:180px;
-    padding:10px;
-    bottom: -5px;
-    left: 429px;
-}
-.img-txt4 {
-    position: absolute;
-    background-color: #ffa500;
-    color:#ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    border:none;
-    width:180px;
-    padding:10px;
-    bottom: -5px;
-    left: 640px;
-}
-.img-txt5 {
-    position: absolute;
-    background-color: #ffa500;
-    color:#ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    border:none;
-    width:180px;
-    padding: 10px;
-    bottom: -218px;
-    left: 5px;
-}
-input:hover{
-    background-color: #c3c3c3;
-    
-}
-img {
-    border-right: 1.8px solid #636363;
-    border-bottom: 1.8px solid #636363;
-}
+  
+  #contact-form ul {
+    margin-bottom: 20px;
+  }
+  
+  #contact-form li {
+    margin-bottom: 10px;
+  }
+  
+  label,
+  input[type=text],
+  input[type=email],
+  textarea {
+    display: block;
+    width: 100%;
+  }
+  
+  input[type=text],
+  input[type=email],
+  textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+  }
+  
+  textarea {
+    height: 200px;
+  }
+  
+  input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    background: #ffa500;
+    border: 0 none;
+  }
+  
+  p{
+      text-align: justify;
+  }
+ 
+  input:hover{
+      background-color: #c3c3c3;
+  }
